IndexQueriesTest